fix(EV-3461): clipping long response and showing tooltip on hover (#2370)
* fix(EV-3461): clipping long response and showing tooltip on hover

* fix(EV-3461): adding css for clipping text

--- a/src/client/index.css
+++ b/src/client/index.css
@@ -1127,6 +1127,12 @@ input[type="checkbox"] {
   margin-bottom: 20px;
 }
 
+.clipText {
+  text-overflow: ellipsis;
+  white-space: nowrap;
+  overflow: hidden;
+}
+
 .super-dragger .ant-upload.ant-upload-drag {
   padding: 0;
 }
